Add DOMPurify sanitization for HTML field rendering
Sanitize HTML field content in record viewer modal to prevent XSS from
stored malicious content in Salesforce records. Also import escapeAttr
from text-utils.js to prepare for consolidation of duplicate function.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@jetstreamapp/soql-parser-js": "^6.3.1",
     "@salesforce-ux/icons": "^10.5.4",
+    "dompurify": "^3.3.1",
     "monaco-editor": "^0.55.1"
   },
   "scripts": {
